[gd_scene load_steps=9 format=2]

[ext_resource path="res://Card_Images/UNO_1.png" type="Texture" id=1]
[ext_resource path="res://Cards/Card.gd" type="Script" id=2]
[ext_resource path="res://Card_Images/Uno_Back.png" type="Texture" id=3]
[ext_resource path="res://Cards/Outline.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.881, 40.595 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.881, 10 )

[sub_resource type="Animation" id=3]
resource_name = "to_closed"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.08, 0.08 ), Vector2( 0.08, 1e-05 ), Vector2( 0.08, 0.08 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.08, 0.08 ), Vector2( 0.08, 1e-05 ), Vector2( 0.08, 0.08 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Outline:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.377, 0.543 ), Vector2( 0.377, 1e-05 ), Vector2( 0.377, 0.543 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "to_open"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.08, 0.08 ), Vector2( 0.08, 1e-05 ), Vector2( 0.08, 0.08 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Back:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.08, 0.08 ), Vector2( 0.08, 1e-05 ), Vector2( 0.08, 0.08 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Outline:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.377, 0.543 ), Vector2( 0.377, 1e-05 ), Vector2( 0.377, 0.543 ) ]
}

[node name="Card" type="Area2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Outline" parent="." instance=ExtResource( 4 )]
visible = false
modulate = Color( 1, 0.701961, 0, 0 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Second_Checker" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 50.5 )
shape = SubResource( 2 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Back" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/to_closed = SubResource( 3 )
anims/to_open = SubResource( 4 )

[node name="Tween3" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween2" to="." method="_on_Tween_tween_all_completed"]
